storage/innobase/dict/dict0load.cc
@@ -1449,8 +1449,7 @@ next:
 		/* Now that we have the proper name for this tablespace,
 		look to see if it is already in the tablespace cache. */
 		if (fil_space_for_table_exists_in_mem(
-			    space_id, table_name.m_name,
-			    false, NULL, flags)) {
+			    space_id, table_name.m_name, NULL, flags)) {
 			/* Recovery can open a datafile that does not
 			match SYS_DATAFILES.  If they don't match, update
 			SYS_DATAFILES. */
@@ -2845,7 +2844,12 @@ dict_load_tablespace(
 
 	/* The tablespace may already be open. */
 	if (fil_space_for_table_exists_in_mem(
-		    table->space, space_name, false, heap, table->flags)) {
+		    table->space, space_name, heap, table->flags)) {
+		return;
+	}
+
+	if (ignore_err == DICT_ERR_IGNORE_DROP) {
+		table->file_unreadable = true;
 		return;
 	}
 
